# ai-video-gen

./: .env.example  .gitignore  README.md  generate_presentation.ps1  main.py  pyproject.toml  requirements.txt  style_packs.example.json
.github/ISSUE_TEMPLATE/: feature_request.md
ai_video_gen/: __init__.py  cli.py  config.py  pipeline.py  postprocess.py  utils.py
ai_video_gen/providers/: __init__.py  base.py  veo.py
docs/: getting-started.md  presentation-mode.md  prompt-engineering.md  providers.md  style-packs.md
examples/: prompts.example.json  style_packs.example.json
input/: presentation_sequence.example.json  presentation_sequence.json  prompts.example.json
